Updated code with subscription and workout plans finished

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -55,16 +55,15 @@
             android:layout_marginVertical="8dp"
             android:maxWidth="600dp" />
 
-        <EditText
-            android:id="@+id/etSecurityQuestion"
+        <!-- Password requirements -->
+        <TextView
+            android:id="@+id/tvPasswordRequirements"
             android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:hint="@string/hint_security_question"
-            android:inputType="text"
-            android:autofillHints="securityQuestion"
+            android:layout_height="wrap_content"
             android:padding="12dp"
             android:layout_marginVertical="8dp"
-            android:maxWidth="600dp" />
+            android:text="@string/password_requirements"
+            android:textAppearance="?attr/textAppearanceListItem"/>
 
         <EditText
             android:id="@+id/etDob"
