--- a/app/src/main/res/layout/list_item_workout_plan.xml
+++ b/app/src/main/res/layout/list_item_workout_plan.xml
@@ -35,12 +35,13 @@ android:text="Sets: 3"
 android:paddingBottom="8dp"/>
 
     <!-- Description -->
-<TextView
-android:id="@+id/tvPlanDescription"
-android:layout_width="match_parent"
-android:layout_height="wrap_content"
-android:text="Plan Description"
-android:paddingBottom="8dp"/>
+    <TextView
+        android:id="@+id/tvPlanDescription"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Plan Description"
+        android:textSize="14sp"
+        android:layout_marginTop="8dp" />
 
     <!-- Delete Button -->
 <Button
