--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -33,6 +33,12 @@
         android:label="@string/menu_Workout_Plans"
         tools:layout="@layout/fragment_workout_plans" />
 
+    <fragment
+        android:id="@+id/nav_trainer"
+        android:name="com.example.group5phft.ui.trainer.TrainerReviewFragment"
+        android:label="@string/menu_trainer"
+        tools:layout="@layout/fragment_trainer_review" />
+
 
 
 </navigation>
